ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-webserver-ingress
spec:
  rules:
    - host: "wells3.test.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whale-service
                port:
                  number: 3001
    - host: "wells4.test.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiba-inu-service
                port:
                  number: 3200
